Fix all remaining 90 compilation errors - backport complete
This commit resolves the final 90 compilation errors for the Minecraft 1.20.1 backport.

Fixed issues by category:

1. Registry API - CompressibleMapData.java (3 fixes)
   - Removed .get().value() wrapper chains from Registry calls
   - registryOrThrow() now returns Biome directly in 1.20.1

2. ServerData Realm check - VoxelConstants.java
   - Replaced ServerData.Type.REALM check with return false
   - Realms type checking not available in 1.20.1

3. GuiGraphics.blit() signatures - GuiPersistentMap.java, Popup.java
   - Fixed blitSprite() parameter mismatch
   - Fixed blit() null parameter handling
   - Fixed VoxelMapGuiGraphics.blitFloatGradient() calls

4. AbstractSelectionList API - All list GUI classes (6 files)
   - Added updateNarration() implementations
   - Fixed Entry.render() signatures (5 params → 9 params)
   - Replaced getX()/getY() with render parameters
   - Fixed mouseScrolled() signature (removed horizontalAmount)

5. Screen rendering - GuiAddWaypoint.java, GuiButtonText.java
   - renderTransparentBackground() → renderBackground()
   - renderContents() → renderWidget()

6. Player/World API - GuiWaypoints.java
   - nameAndId() → getGameProfile()
   - isAllowCommands() → getAllowCommands()

7. ArrayList Java 8/11 compatibility - GuiWelcomeScreen.java
   - getFirst()/getLast() → get(0)/get(size()-1)

8. SkinManager API - GuiButtonRowListPlayers.java
   - getInsecureSkin() → getInsecureSkinInformation()

Files modified: 14
- CompressibleMapData.java
- VoxelConstants.java
- GuiPersistentMap.java
- Popup.java
- GuiSlotMobs.java
- GuiSlotWaypoints.java
- GuiSlotDimensions.java
- GuiSubworldsSelect.java
- GuiSelectPlayer.java
- GuiAddWaypoint.java
- GuiWaypoints.java
- GuiWelcomeScreen.java
- GuiButtonText.java
- GuiButtonRowListPlayers.java

All 900+ compilation errors from the 1.21 to 1.20.1 backport have been resolved.